--- a/prometheus.yml
+++ b/prometheus.yml
@@ -29,13 +29,9 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
 
-# remote storage details. For Metricfire accounts these can be
-# found at https://app.metricfire.com/quickstart/
-    
-remote_read:
-    - url: https://remote.metricfire.com/read
-      bearer_token: <metricfire-API-Key>
-
-remote_write:
-    - url: https://remote.metricfire.com/write
-      bearer_token: <metricfire-API-Key>
+  - job_name: 'node_exporter_metrics'
+    static_configs:
+    - targets: ['3.83.106.103:9100']
+  - job_name: 'cadvisor'
+    static_configs:
+    - targets: ['3.83.106.103:8080']
