--- a/prometheus-config4.yaml
+++ b/prometheus-config4.yaml
@@ -47,7 +47,7 @@ data:
         scheme: https
 
         tls_config:
-           insecure_skip_verify: true
+          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
 
         kubernetes_sd_configs:
