--- a/prometheus.yml
+++ b/prometheus.yml
@@ -31,7 +31,7 @@ scrape_configs:
 
   - job_name: 'node_exporter_metrics'
     static_configs:
-    - targets: ['3.83.106.103:9100']
+    - targets: ['localhost:9100']
   - job_name: 'cadvisor'
     static_configs:
-    - targets: ['3.83.106.103:8080']
+    - targets: ['localhost:8080']
