--- a/prometheus-config2.yaml
+++ b/prometheus-config2.yaml
@@ -37,10 +37,10 @@ data:
         scrape_interval: 15s
         scrape_timeout: 15s
         static_configs:
-        - targets: ['3.83.106.103:9100']
+        - targets: ['localhost:9100']
       - job_name: 'cadvisor'
         static_configs:
-        - targets: ['3.83.106.103:8080']
+        - targets: ['localhost:8080']
 
       - job_name: 'kubernetes-nodes'
 
